# tvm

./: .asf.yaml  .ci_hotfix.sh  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lesshst  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .tmp_scatter_cuda_check.py  .travis.yml  .yamllint.yaml  .ycm_extra_conf.py  3q  =0.7.0  AGENTS.md  APIReference.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTORS.md  CPU_SAMPLE_DEVICE_README.md  DISCLAIMER  Dockerfile  INSTALL  Jenkinsfile  KEYS  LICENSE  MIGRATION_SUMMARY.md  Makefile  NEWS.md  NOTICE  PYTHON_BUILD_README.md  README.VSI.md  README.md  a5.txt  a5_d.txt  basic_script.py  bb.py  cmake.sh  conftest.py  (+104 more)
apps/bundle_deploy/: CMakeLists.txt  Makefile  README.md  backtrace.c  backtrace.h  build_crt_config.py  build_model.py  bundle.c  bundle.cc  bundle.h  bundle_static.c  demo.cc  demo_static.c  demo_static.gcda  func_registry.gcda  make.bat  runtime.c  runtime.cc  test.cc  test_c.c  test_static.c
apps/bundle_deploy/crt_config/: crt_config.h
apps/cpp_clml/: CMakeLists.txt  README.md  clml_runner.cc  clml_runner.h  main.cc
apps/cpp_clml/scripts/: clml_codegen.py  clml_codegen_json.py  compare_npy.py
apps/cpp_rpc/: CMakeLists.txt  Makefile  README.md  main.cc  rpc_env.cc  rpc_env.h  rpc_server.cc  rpc_server.h  rpc_server_env.cc  rpc_server_env.h  rpc_tracker.cc  rpc_tracker.h  rpc_tracker_client.h  rpc_tracker_server.h  win32_process.cc  win32_process.h
apps/cpp_rtvm/: CMakeLists.txt  README.md  main.cc  tvm_runner.cc  tvm_runner.h
apps/cpp_rtvm/scripts/: download_models.py
apps/hexagon_launcher/: CMakeLists.txt  README.md  launcher_android.cc  launcher_core.cc  launcher_core.h  launcher_hexagon.cc  launcher_main.cc  launcher_rpc.idl  launcher_util.cc  launcher_util.h
apps/hexagon_launcher/cmake/: HexagonLauncher.cmake
apps/hexagon_launcher/rpc_skel/: CMakeLists.txt
apps/microtvm/: README.md  pyproject.toml  requirements.txt
apps/microtvm/arduino/: README.md
apps/microtvm/cmsisnn/: .gitignore  Makefile  README.md  convert_image.py  corstone300.ld  requirements.txt  run_demo.sh
apps/microtvm/ethosu/: .gitignore  Makefile  Makefile_alif.mk  README.md  alif_flash_config.json  convert_image.py  convert_labels.py  corstone300.ld  docker_run.sh  flash.sh  gcc_M55_HE.ld  gcc_M55_HP.ld  requirements.txt  run_demo.sh
apps/microtvm/gemmini/: README.md
apps/microtvm/grovety/: common.py  conv2d_zephyr.py  mnist_aot.py  run.py  sine_zephyr.py  sine_zephyr_aot.py  test_cpu.py  tf_common.py  to_relay.py
apps/microtvm/picodet/: README.md  run_demo.sh
apps/microtvm/reference-vm/: .gitignore  README.md  Vagrantfile  base-box-tool.py  base_box_setup_common.sh  provision_setup.sh  rebuild-tvm.sh  rebuild_tvm.sh
apps/microtvm/riscv/: Makefile  README.md  ReadMe.md  convert_data.py  run.sh
apps/microtvm/riscv_esp32/: .gitignore  CMakeLists.txt  README.md  allocate_tensors.py  requirements.txt  run.sh
apps/microtvm/stm32/: Makefile  README.md
apps/microtvm/zephyr/: README.md
apps/microtvm/zephyr_cmsisnn/: .gitignore  CMakeLists.txt  README.md  prj.conf  run_demo.sh
apps/sgx/enclave/: .rustfmt.toml  Cargo.toml  Makefile  Xargo.toml  build.rs  enclave.lds  enclave.pem  enclave_config.xml.in  sgx-deps.diff  x86_64-unknown-linux-sgx.json
apps/wasm-standalone/wasm-graph/: Cargo.toml  build.rs
apps/wasm-standalone/wasm-runtime/: Cargo.toml
cmake/libs/hexagon_rpc_skel/: CMakeLists.txt
dlpack/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  NEWS.md  README.md
dlpack/contrib/: mock_c.c  mock_main.cc
dlpack/contrib/dlpack/: dlpackcpp.h
dlpack/docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
dlpack/include/dlpack/: dlpack.h
dlpack/tests/scripts/: task_build.sh  task_lint.sh
dlpack/tests/travis/: run_test.sh  setup.sh
ffi/: CMakeLists.txt  README.md  pyproject.toml
ffi/cmake/: tvm_ffi-config.cmake
ffi/cmake/Utils/: AddGoogleTest.cmake  AddLibbacktrace.cmake  CxxWarning.cmake  Library.cmake  Sanitizer.cmake
ffi/docs/: .gitignore  Makefile  README.md  conf.py  index.rst  requirements.txt
ffi/docs/concepts/: abi_overview.md
ffi/docs/get_started/: install.md  quick_start.md
ffi/docs/guides/: cpp_guide.md  packaging.md  python_guide.md
ffi/examples/get_started/: CMakeLists.txt  README.md  run_example.py  run_example.sh
ffi/examples/inline_module/: main.py
ffi/scripts/: benchmark_dlpack.py  run_tests.sh
ffi/src/ffi/: dtype.cc  (+11 more)
nnvm/: CMakeLists.txt  Jenkinsfile  LICENSE  Makefile  NEWS.md  README.md
nnvm/amalgamation/: .gitignore  Makefile  README  amalgamation.py  generate.py
nnvm/deploy/: REAMD.md  nnvm_runtime.cc
nnvm/docs/: .gitignore  Doxyfile  Makefile  README.txt  conf.py  index.rst  operators.md  overview.md  top.rst
nnvm/example/: mobilenet_inference_gpu.py
nnvm/examples/: README.md
nnvm/make/: config.mk
nnvm/python/: .gitignore  setup.py
nnvm/src/: README.md  nngraph.cc  test_main.cc
nnvm/tutorials/: .gitignore  README.txt  define_and_compile_model.py  deploy_model_on_mali_gpu.py  deploy_model_on_rasp.py  deploy_ssd_mxnet.py  from_coreml.py  from_darknet.py  from_mxnet.py  from_mxnet_to_webgl.py  from_onnx.py  from_tensorflow.py  get_started.py  imagenet_inference_gpu.py  mobilenet_inference_gpu.py  tune_nnvm_arm.py  tune_nnvm_cuda.py  tune_nnvm_mobile_gpu.py  tune_nnvm_x86.py  using_external_lib.py
rust/: .gitignore  .rustfmt.toml  Cargo.toml  build.rs  rustfmt.toml
rust/common/: .gitignore  Cargo.toml  build.rs
rust/compiler-ext/: Cargo.toml
rust/egg/: import_pass.py
rust/frontend/: Cargo.toml  README.md
rust/graph-runtime/: Cargo.toml
rust/macros/: Cargo.toml
rust/macros_raw/: Cargo.toml
rust/out-of-tree/: Cargo.toml  import_pass.py
rust/runtime/: .travis.yml  Cargo.toml
rust/src/: errors.rs  lib.rs
rust/tests/: .gitignore  build_model.py  test_graph_serde.rs
rust/tvm/: Cargo.toml  README.md  test.rly
rust/tvm-graph-rt/: Cargo.toml  README.md
rust/tvm-macros/: Cargo.toml  README.md
rust/tvm-rt/: .gitignore  .travis.yml  Cargo.toml  README.md
rust/tvm-runtime-sys/: Cargo.toml
rust/tvm-sys/: Cargo.toml  README.md  build.rs
(+16422 files in other folders)
