# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
# scikit-build-core>=0.11 for PEP 639 license expression / license-files
# support. cmake and ninja are declared explicitly here (rather than left to
# scikit-build-core's implicit fetch) so the full build toolchain lives in
# pyproject.toml; cmake>=3.24 is required for ZLIB_USE_STATIC_LIBS.
requires = ["scikit-build-core>=0.11", "cmake>=3.24", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "tvm"
# Note: Call version.py to update the version before building the wheel
version = "0.25.dev0"
description = "Apache TVM: An End-to-End Deep Learning Compiler Stack"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Apache TVM Community", email = "dev@tvm.apache.org" }]
keywords = ["machine learning", "compiler", "deep learning", "inference"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core runtime dependencies: the minimum needed to ``import tvm`` and build/run
# modules. Model-importer frameworks are kept out of here (see
# [project.optional-dependencies]). pytest is required at import time because
# tvm.rpc loads tvm.testing, which pulls in pytest; until that import chain is
# decoupled it must stay a core dependency.
dependencies = [
  "apache-tvm-ffi>=0.1.11",
  "ml_dtypes",
  "numpy",
  "psutil",
  "pytest",
  "typing_extensions",
]

# Optional runtime features. Each importer extra pulls in the third-party
# framework needed to read models from that ecosystem; install only what you
# need, e.g. ``pip install tvm[importer-onnx]``.
[project.optional-dependencies]
# Model importers -- only the Relax frontends that actually exist under
# python/tvm/relax/frontend are listed (onnx, torch, tflite).
importer-onnx = ["onnx", "onnxoptimizer", "onnxruntime"]
importer-pytorch = ["torch", "torchvision"]
importer-tflite = ["tflite"]

# CoreML codegen backend (tvm.relax.backend.metal.coreml) emits a CoreML model;
# this is a backend, not a model importer.
coreml = ["coremltools"]

# Meta-schedule auto-tuning cost model. (AutoTVM / auto-scheduler were removed
# from the Relax-era TVM; meta_schedule is the current tuning stack.)
meta-schedule = ["xgboost"]

# ``all`` intentionally pulls in only TVM's own optional runtime feature (the
# meta-schedule tuning stack). Model importers and codegen backends are heavy
# third-party frameworks that depend on TVM rather than the reverse, so they are
# NOT bundled here -- install them explicitly per ecosystem.
all = ["xgboost"]

[project.urls]
Homepage = "https://tvm.apache.org/"
Documentation = "https://tvm.apache.org/docs/"
Repository = "https://github.com/apache/tvm"
"Bug Tracker" = "https://github.com/apache/tvm/issues"

# Development-only dependency groups (PEP 735). These are NOT published in the
# wheel metadata; install them for local development with e.g.
# ``uv sync``, ``uv pip install --group dev``, or ``pip install --group dev``.
[dependency-groups]
test = [
  "pytest",
  "pytest-xdist",
  "pytest-cov",
  "pytest-mock",
  "pytest-benchmark",
  "pytest-timeout",
  "pytest-rerunfailures",
  "pytest-repeat",
]
lint = ["ruff", "ty", "pre-commit"]
dev = [{ include-group = "test" }, { include-group = "lint" }]

[tool.scikit-build]
# Point to the root CMakeLists.txt
cmake.source-dir = "."
cmake.build-type = "Release"

# Configure the wheel to be Python version-agnostic
wheel.py-api = "py3"

# Build configuration. Use a tagged subdirectory so wheel builds do not clobber
# a developer's top-level ``build/`` (and its compile_commands.json used by
# clangd), and so builds can be cached per wheel tag.
build-dir = "build/{wheel_tag}"

# Static CMake configuration shared by every wheel build. The dynamic bits
# (the USE_LLVM config path, CMAKE_PREFIX_PATH, and the CUDA TVM_PACKAGE_EXTRA_LIBS
# path) are layered on via CMAKE_ARGS by the publishing workflow. cmake>=3.24 is
# required for ZLIB_USE_STATIC_LIBS (see [build-system]).
cmake.define.TVM_BUILD_PYTHON_MODULE = "ON"
cmake.define.USE_CUDA = "OFF"
cmake.define.BUILD_TESTING = "OFF"
cmake.define.ZLIB_USE_STATIC_LIBS = "ON"

# Wheel configuration
wheel.packages = ["python/tvm"]
wheel.install-dir = "tvm"

# Source distribution configuration
sdist.include = [
  # Build files
  "/CMakeLists.txt",
  "/pyproject.toml",
  "/cmake/**/*",

  # Source code
  "/src/**/*.cc",
  "/src/**/*.h",
  "/include/**/*.h",

  # Python source
  "/python/tvm/**/*.py",
  "/python/tvm/**/*.pyi",

  # Documentation and metadata
  "/docs/**/*",
  "/LICENSE",
  "/README.md",
  "/NOTICE",

  # Tests
  "/tests/**/*",
]

sdist.exclude = [
  "**/.git",
  "**/.github",
  "**/__pycache__",
  "**/*.pyc",
  "build",
  "dist",
  "**/3rdparty/*/docs",
  "**/3rdparty/*/media",
  "**/3rdparty/*/examples",
  "**/3rdparty/*/test",
]

# Logging
logging.level = "INFO"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "adreno_clml: Mark a test as using adreno_clml",
  "adreno_opencl_vulkan: Mark a test as using adreno_opencl_vulkan",
  "adreno_vulkan: Mark a test as using adreno_vulkan",
  "adreno_opencl: Mark a test as using adreno_opencl",
  "adreno_opencl_real: Mark a test as using adreno_opencl_real",
]

[tool.ruff]
include = [
  "python/**/*.py",
  "tests/**/*.py",
  "docs/**/*.py",
  "apps/**/*.py",
  "ci/scripts/**/*.py",
  "conftest.py",
  "jvm/**/*.py",
  "version.py",
  "web/tests/**/*.py",
]
line-length = 100
indent-width = 4
target-version = "py310"
exclude = [
  "3rdparty",
  "build",
  "dist",
  ".venv",
  ".ruff_cache",
  "node_modules",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors, https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "F",   # pyflakes, https://docs.astral.sh/ruff/rules/#pyflakes-f
  "I",   # isort, https://docs.astral.sh/ruff/rules/#isort-i
  "UP",  # pyupgrade, https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "RUF", # ruff, https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
ignore = [
  # pyupgrade (style preference or low-value)
  "UP028", # yield-in-for-loop — sometimes clearer to keep
  "UP030", # format-literals — minor
  "UP031", # printf-string-formatting — style preference
  # ruff (preview rules, not yet stable)
  "RUF043", # pytest-raises-ambiguous-pattern
  "RUF059", # unused-unpacked-variable
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F405"]
"python/tvm/relax/op/nn/nn.py" = ["E501"]
"docs/how_to/tutorials/mix_python_and_tvm_with_pymodule.py" = ["RUF003"]
"python/tvm/relax/frontend/tflite/tflite_frontend.py" = ["E501"]
"python/tvm/relax/transform/legalize_ops/nn.py" = ["E501"]
# Scope-id declarations like ``lane_id = Tx.lane_id([32])`` register a TIR
# scope_id for side effect; the Python handle is often unused. Silence F841
# for paths that heavily use this idiom.
"tests/python/tirx/**/*.py" = ["F841"]

[tool.ruff.lint.isort]
known-first-party = ["tvm"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ty.environment]
python-version = "3.10"
# First-party modules live under python/ (imported as ``tvm``).
root = ["python"]

[tool.ty.src]
include = ["python/tvm"]
exclude = ["3rdparty", "build", "dist"]

[tool.ty.rules]
# TVM has many optional third-party imports and large untyped areas; don't fail
# the check on every missing stub (mirrors the previous mypy leniency).
unresolved-import = "ignore"

[tool.cibuildwheel]
build-verbosity = 1
# Verify the installed wheel with a small pytest suite (post-install checks
# such as the LLVM compile smoke test and the static-LLVM / CUDA-runtime
# library checks). The wheel-specific expectations are passed through the
# environment by the publishing workflow.
test-requires = ["pytest", "numpy"]
# Use the suite's own pytest.ini (-c) so it does not inherit the repository's
# root pytest config/conftest, which loads tvm.testing.plugin and the full test
# harness — too heavy for a wheel smoke check.
test-command = "pytest -c {project}/tests/python/wheel/pytest.ini {project}/tests/python/wheel"

# Per-platform build and repair steps live here (the standard cibuildwheel
# location, mirroring tvm-ffi). The publishing workflow only layers the dynamic
# environment (LLVM config path, CUDA runtime, dist name/version) on top.
# set_wheel_dist.py applies the optional TestPyPI name/version override; the
# vendored tvm-ffi is the build-time FFI dependency. auditwheel (manylinux
# image) and delocate (cibuildwheel) are already present; only delvewheel must
# be installed for the Windows repair.
[tool.cibuildwheel.linux]
before-build = 'if command -v dnf >/dev/null 2>&1; then dnf -y install libxml2-devel; fi && python {project}/ci/scripts/package/set_wheel_dist.py {project}/pyproject.toml && python -m pip install -v {project}/3rdparty/tvm-ffi'
repair-wheel-command = "auditwheel repair --exclude libtvm_ffi.so --exclude libtvm_runtime_cuda.so --exclude 'libcuda.so.*' --exclude 'libcudart.so.*' --exclude 'libnvrtc.so.*' --exclude 'libnvrtc-builtins.so.*' -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-build = 'python {project}/ci/scripts/package/set_wheel_dist.py {project}/pyproject.toml && python -m pip install -v {project}/3rdparty/tvm-ffi'
repair-wheel-command = 'DYLD_LIBRARY_PATH="/opt/llvm/lib${DYLD_LIBRARY_PATH:+:$DYLD_LIBRARY_PATH}" delocate-wheel --ignore-missing-dependencies --exclude libtvm_ffi.dylib --require-archs {delocate_archs} -w {dest_dir} -v {wheel}'

[tool.cibuildwheel.windows]
before-build = 'python -m pip install delvewheel && python {project}/ci/scripts/package/set_wheel_dist.py {project}/pyproject.toml && python -m pip install -v {project}/3rdparty/tvm-ffi'
repair-wheel-command = "delvewheel repair --analyze-existing --ignore-existing --add-path C:/opt/llvm/Library/bin --exclude tvm_ffi.dll --exclude libtvm_ffi.dll -w {dest_dir} {wheel}"
